--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^9.0.0",
     "expo": "^32.0.4",
+    "fetch": "^1.1.0",
     "firebase": "^5.8.2",
+    "linq": "^3.1.1",
     "moment": "^2.24.0",
     "native-base": "^2.8.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-animatable": "^1.3.1",
     "react-native-elements": "^1.0.0",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-size-matters": "^0.1.6",
+    "react-native-sound": "^0.10.12",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9",
     "react-poker": "0.0.77",
@@ -30,6 +36,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "require": "^2.4.20",
+    "socket.io-client": "^2.2.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
