--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^9.0.0",
+    "buffer": "^5.2.1",
     "expo": "^32.0.4",
     "fetch": "^1.1.0",
     "firebase": "^5.8.2",
@@ -29,6 +30,7 @@
     "react-native-size-matters": "^0.1.6",
     "react-native-sound": "^0.10.12",
     "react-native-swiper": "^1.5.14",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9",
     "react-poker": "0.0.77",
