--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-router-flux": "^4.0.6",
     "react-native-size-matters": "^0.1.6",
     "react-native-sound": "^0.10.12",
+    "react-native-svg": "8.0.10",
     "react-native-swiper": "^1.5.14",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.2.0",
